# school-predictor

./: .gitignore  AGENTS.md  README.md  dashboard_streamlit.py  main.py  pyproject.toml
crisp_dm/: 1_business_understanding.ipynb  2_data_understanding.ipynb  3_data_preparation.ipynb  4_modeling.ipynb  5_evaluation.ipynb  6_deployment.ipynb
diagrama/: arquitetural.md  casos_de_uso.md  fluxo.md  sequencia_operacional.md
monografia/: modelo-ifg.tex
monografia/apendices/: apendI.tex
monografia/bib/: bibliografia.bib
monografia/formatacao/: classe-ifg.cls
monografia/pre/: preResumo.tex
monografia/preprojeto_tex/: sec02.tex
monografia/tex/: cap01.tex  cap02.tex  cap03.tex  cap04.tex  cap05.tex  cap06.tex
school_predictor/: cleanup.py  cli.py
school_predictor/database/: private_runtime.example.py
school_predictor/pipeline/: __init__.py  dataset.py  stability.py
tcc/: modelo-ifg.tex  preprojeto-ifg.tex
tcc/apendices/: apendI.tex
tcc/bib/: bibliografia.bib
tcc/pre/: preAbstract.tex  preBanca.tex
tcc/tex/: cap03.tex  cap04.tex
