[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "school-predictor"
version = "0.1.0"
description = "Pipeline preditiva para analise de risco academico escolar."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "pyodbc>=5.3.0,<6.0",
  "sqlalchemy>=2.0.51,<2.1",
  "pandas>=3.0.3,<3.1",
  "numpy>=2.5.1,<2.6",
  "scikit-learn>=1.9.0,<1.10",
  "plotly>=6.9.0,<6.10",
  "streamlit>=1.59.2,<1.60",
]

[project.scripts]
school-predictor = "school_predictor.cli:main"
